[package]

name = "routeros_rust"
version = "0.0.1"
authors = ["Jason Cardinal <jasonfowl1234@yahoo.com>"]
repository = "https://github.com/Wooowe/mikrotik-rust"
description = "Mikrotik API for Rust"
readme = "README.md"
license = "GPL"

[lib]
name = "router_os"
path = "src/routeros.rs"

[[bin]]
name = "example"
path = "example.rs"

[dependencies]
rust-crypto = "0.2.31"
